HEAD
	+`Use IPS module to know the number of IDS/IPS rules
	+ Honor system-wide defined HTTP Proxy in REST client
	+ Better error message when JSON creadentials file is missing
	+ Missing EBox::Gettext use in EBox::RemoteServices::Connection
3.2
	+ Set version to 3.2
3.1.9
	+ Handle connection errors in setAdminPort
	+ Set to debug level several dev oriented notifications
3.1.8
	+ Better error if we cannot register due to lack of free space
	+ Fix links to see latest reports or its documentation on Reports tab
	+ Set proper URL to reach Zentyal Remote dashboard from dashboard
3.1.7
	+ Adapt backups' list to new UI
3.1.6
	+ Adapt remote backup to new UI CSS
	+ Removed implementation of the removed Desktop::ServiceProvider
3.1.5
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Fixed wrong jQuery interpolation in Subscription form
	+ Retry making the configuration backup if the conf backup process
	  produced a corrupted backup
	+ Send the checksum of the conf backup when pushing to check
	  its integrity on server side
	+ Explicitly set firewall version dependency in control file
	+ Adapt firewall rules to new accept chains
	+ Display web remote access support settings
	+ Save logs module when creating VPN client to start logging its log
	+ Save software module after setting QA updates configuration
	+ Small correction on a link that were still pointing to Cloud
	+ Support running runnerd without being registered programatically
	+ Give support to custom proxied redirections to provide local HTTP
	  servers from Zentyal Remote using
	  /etc/zentyal/remoteservices_redirections.yaml
	+ Fixed path escape on Reporter::SambaDiskUsage
	+ Removed no longer necessary jQuery noConflict()
3.1.4
	+ Fixed wizard to show again errors
	+ Fixed path escape on Reporter::SambaDiskUsage, thanks to EddieA
	  for pointing out the fix
	+ maxUsers method does not take maxCloudUsers into account
3.1.3
	+ Ported JS code to jQuery
3.1.2